// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`los correos en castellano no cambian solos > aviso al negocio 1`] = `
{
  "html": "<!doctype html>
<html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"></head>
<body style="margin:0;padding:0;background:#F2E7D6;">
<span style="display:none;font-size:1px;color:#F2E7D6;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marina ha reservado para el Martes 15 de septiembre a las 12:00</span>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#F2E7D6;padding:32px 16px;">
<tr><td align="center">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #E4D5BE;border-radius:16px;overflow:hidden;font-family:'Public Sans',Helvetica,Arial,sans-serif;">
    <tr><td style="background:#2E2119;padding:22px 28px;">
      <span style="font-size:20px;font-weight:600;color:#F2E7D6;letter-spacing:-.01em;">Veline</span>
      <span style="font-size:12px;color:#D9A441;padding-left:10px;">Donde cada cita encuentra su lugar</span>
    </td></tr>
    <tr><td style="padding:32px 28px 8px;">
      <h1 style="margin:0 0 12px;font-size:23px;line-height:1.25;color:#2E2119;font-weight:600;">Tienes una cita nueva</h1>
      <p style="margin:0 0 22px;font-size:15px;line-height:1.6;color:#5C4A34;"><strong style="color:#2E2119;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marina</strong> acaba de reservar en &lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería.</p>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #E4D5BE;margin-top:4px;">
    <tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Servicio</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Corte</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Cuándo</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">Martes 15 de septiembre a las 12:00</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Asignada a</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marta</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Cliente</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marina</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Teléfono</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">612345678</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Email</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">marina@ejemplo.es</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Importe</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">25,00 €</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Código</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">VL-TEST</td>
    </tr>
  </table><p style="margin:20px 0 0;padding:14px 16px;background:#F2E7D6;border-radius:10px;font-size:13.5px;line-height:1.6;color:#4A3826;"><strong>Nota del cliente:</strong> &lt;script&gt;robar()&lt;/script&gt;</p><p style="margin:18px 0 0;font-size:13px;color:#8A7255;">
          Escríbele a <a href="mailto:marina@ejemplo.es" style="color:#A96A3E;font-weight:600;">marina@ejemplo.es</a> o llámale
          al <a href="tel:612345678" style="color:#A96A3E;font-weight:600;">612345678</a>.
        </p>
      <table role="presentation" cellpadding="0" cellspacing="0" style="margin:26px 0 6px;"><tr><td style="background:#A96A3E;border-radius:8px;">
              <a href="http://localhost:5173/panel/x" style="display:inline-block;padding:13px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;">Abrir la agenda</a>
            </td></tr></table>
    </td></tr>
    <tr><td style="padding:20px 28px 28px;border-top:1px solid #E4D5BE;">
      <p style="margin:0;font-size:12px;line-height:1.6;color:#8A7255;">
        Este correo se ha enviado automáticamente desde Veline. Si no esperabas recibirlo, puedes ignorarlo.
      </p>
    </td></tr>
  </table>
</td></tr></table>
</body></html>",
  "subject": "Nueva cita: <img src=x onerror="alert(1)">Corte — Martes 15 de septiembre a las 12:00",
  "text": "Tienes una cita nueva

<img src=x onerror="alert(1)">Marina ha reservado en <img src=x onerror="alert(1)">Peluquería.

  Servicio: <img src=x onerror="alert(1)">Corte
  Cuándo: Martes 15 de septiembre a las 12:00
  Asignada a: <img src=x onerror="alert(1)">Marta
  Cliente: <img src=x onerror="alert(1)">Marina
  Teléfono: 612345678
  Email: marina@ejemplo.es
  Importe: 25,00 €
  Código: VL-TEST

Nota del cliente: <script>robar()</script>

Abrir la agenda: http://localhost:5173/panel/x",
}
`;

exports[`los correos en castellano no cambian solos > cancelación (cliente) 1`] = `
{
  "html": "<!doctype html>
<html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"></head>
<body style="margin:0;padding:0;background:#F2E7D6;">
<span style="display:none;font-size:1px;color:#F2E7D6;">La cita del Martes 15 de septiembre a las 12:00 se ha cancelado</span>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#F2E7D6;padding:32px 16px;">
<tr><td align="center">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #E4D5BE;border-radius:16px;overflow:hidden;font-family:'Public Sans',Helvetica,Arial,sans-serif;">
    <tr><td style="background:#2E2119;padding:22px 28px;">
      <span style="font-size:20px;font-weight:600;color:#F2E7D6;letter-spacing:-.01em;">Veline</span>
      <span style="font-size:12px;color:#D9A441;padding-left:10px;">Donde cada cita encuentra su lugar</span>
    </td></tr>
    <tr><td style="padding:32px 28px 8px;">
      <h1 style="margin:0 0 12px;font-size:23px;line-height:1.25;color:#2E2119;font-weight:600;">Cita cancelada</h1>
      <p style="margin:0 0 22px;font-size:15px;line-height:1.6;color:#5C4A34;">Tu cita en <strong style="color:#2E2119;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería</strong> se ha cancelado. El hueco vuelve a estar libre por si quieres otro día.</p>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #E4D5BE;margin-top:4px;">
    <tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Servicio</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Corte</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Era el</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">Martes 15 de septiembre a las 12:00</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Código</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">VL-TEST</td>
    </tr>
  </table>
      <table role="presentation" cellpadding="0" cellspacing="0" style="margin:26px 0 6px;"><tr><td style="background:#A96A3E;border-radius:8px;">
              <a href="http://localhost:5173/x" style="display:inline-block;padding:13px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;">Reservar otra hora</a>
            </td></tr></table>
    </td></tr>
    <tr><td style="padding:20px 28px 28px;border-top:1px solid #E4D5BE;">
      <p style="margin:0;font-size:12px;line-height:1.6;color:#8A7255;">
        Este correo se ha enviado automáticamente desde Veline. Si no esperabas recibirlo, puedes ignorarlo.
      </p>
    </td></tr>
  </table>
</td></tr></table>
</body></html>",
  "subject": "Cita cancelada: <img src=x onerror="alert(1)">Corte — Martes 15 de septiembre a las 12:00",
  "text": "Cita cancelada

Tu cita en <img src=x onerror="alert(1)">Peluquería se ha cancelado.

  Servicio: <img src=x onerror="alert(1)">Corte
  Era el: Martes 15 de septiembre a las 12:00
  Código: VL-TEST

Reservar otra hora: http://localhost:5173/x",
}
`;

exports[`los correos en castellano no cambian solos > cancelación (negocio) 1`] = `
{
  "html": "<!doctype html>
<html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"></head>
<body style="margin:0;padding:0;background:#F2E7D6;">
<span style="display:none;font-size:1px;color:#F2E7D6;">La cita del Martes 15 de septiembre a las 12:00 se ha cancelado</span>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#F2E7D6;padding:32px 16px;">
<tr><td align="center">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #E4D5BE;border-radius:16px;overflow:hidden;font-family:'Public Sans',Helvetica,Arial,sans-serif;">
    <tr><td style="background:#2E2119;padding:22px 28px;">
      <span style="font-size:20px;font-weight:600;color:#F2E7D6;letter-spacing:-.01em;">Veline</span>
      <span style="font-size:12px;color:#D9A441;padding-left:10px;">Donde cada cita encuentra su lugar</span>
    </td></tr>
    <tr><td style="padding:32px 28px 8px;">
      <h1 style="margin:0 0 12px;font-size:23px;line-height:1.25;color:#2E2119;font-weight:600;">Cita cancelada</h1>
      <p style="margin:0 0 22px;font-size:15px;line-height:1.6;color:#5C4A34;">Se ha cancelado una cita en &lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería. El hueco ya vuelve a ofrecerse.</p>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #E4D5BE;margin-top:4px;">
    <tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Servicio</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Corte</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Era el</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">Martes 15 de septiembre a las 12:00</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Código</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">VL-TEST</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Cliente</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marina</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Teléfono</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">612345678</td>
    </tr>
  </table>
      <table role="presentation" cellpadding="0" cellspacing="0" style="margin:26px 0 6px;"><tr><td style="background:#A96A3E;border-radius:8px;">
              <a href="http://localhost:5173/panel/x" style="display:inline-block;padding:13px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;">Abrir la agenda</a>
            </td></tr></table>
    </td></tr>
    <tr><td style="padding:20px 28px 28px;border-top:1px solid #E4D5BE;">
      <p style="margin:0;font-size:12px;line-height:1.6;color:#8A7255;">
        Este correo se ha enviado automáticamente desde Veline. Si no esperabas recibirlo, puedes ignorarlo.
      </p>
    </td></tr>
  </table>
</td></tr></table>
</body></html>",
  "subject": "Cita cancelada: <img src=x onerror="alert(1)">Corte — Martes 15 de septiembre a las 12:00",
  "text": "Cita cancelada

Se ha cancelado una cita en <img src=x onerror="alert(1)">Peluquería.

  Servicio: <img src=x onerror="alert(1)">Corte
  Era el: Martes 15 de septiembre a las 12:00
  Código: VL-TEST
  Cliente: <img src=x onerror="alert(1)">Marina
  Teléfono: 612345678

Abrir la agenda: http://localhost:5173/panel/x",
}
`;

exports[`los correos en castellano no cambian solos > confirmación al cliente 1`] = `
{
  "html": "<!doctype html>
<html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"></head>
<body style="margin:0;padding:0;background:#F2E7D6;">
<span style="display:none;font-size:1px;color:#F2E7D6;">Martes 15 de septiembre a las 12:00 en &lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería</span>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#F2E7D6;padding:32px 16px;">
<tr><td align="center">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #E4D5BE;border-radius:16px;overflow:hidden;font-family:'Public Sans',Helvetica,Arial,sans-serif;">
    <tr><td style="background:#2E2119;padding:22px 28px;">
      <span style="font-size:20px;font-weight:600;color:#F2E7D6;letter-spacing:-.01em;">Veline</span>
      <span style="font-size:12px;color:#D9A441;padding-left:10px;">Donde cada cita encuentra su lugar</span>
    </td></tr>
    <tr><td style="padding:32px 28px 8px;">
      <h1 style="margin:0 0 12px;font-size:23px;line-height:1.25;color:#2E2119;font-weight:600;">¡Reserva confirmada!</h1>
      <p style="margin:0 0 22px;font-size:15px;line-height:1.6;color:#5C4A34;">Hola &lt;img, te esperan en <strong style="color:#2E2119;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería</strong>.</p>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #E4D5BE;margin-top:4px;">
    <tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Servicio</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Corte</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Cuándo</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">Martes 15 de septiembre a las 12:00</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Te atiende</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marta</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Dónde</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Calle Mayor</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Código</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">VL-TEST</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Total</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">25,00 €</td>
    </tr>
  </table>
      <table role="presentation" cellpadding="0" cellspacing="0" style="margin:26px 0 6px;"><tr><td style="background:#A96A3E;border-radius:8px;">
              <a href="http://localhost:5173/reserva/VL-TEST" style="display:inline-block;padding:13px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;">Ver o cancelar mi reserva</a>
            </td></tr></table>
    </td></tr>
    <tr><td style="padding:20px 28px 28px;border-top:1px solid #E4D5BE;">
      <p style="margin:0;font-size:12px;line-height:1.6;color:#8A7255;">
        Este correo se ha enviado automáticamente desde Veline. Si no esperabas recibirlo, puedes ignorarlo.
      </p>
    </td></tr>
  </table>
</td></tr></table>
</body></html>",
  "subject": "Tu cita en <img src=x onerror="alert(1)">Peluquería — Martes 15 de septiembre a las 12:00",
  "text": "¡Reserva confirmada!

Te esperan en <img src=x onerror="alert(1)">Peluquería.

  Servicio: <img src=x onerror="alert(1)">Corte
  Cuándo: Martes 15 de septiembre a las 12:00
  Te atiende: <img src=x onerror="alert(1)">Marta
  Dónde: <img src=x onerror="alert(1)">Calle Mayor
  Código: VL-TEST
  Total: 25,00 €

Ver o cancelar tu reserva: http://localhost:5173/reserva/VL-TEST",
}
`;

exports[`los correos en castellano no cambian solos > recordatorio 1`] = `
{
  "html": "<!doctype html>
<html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"></head>
<body style="margin:0;padding:0;background:#F2E7D6;">
<span style="display:none;font-size:1px;color:#F2E7D6;">Martes 15 de septiembre a las 12:00 en &lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería</span>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#F2E7D6;padding:32px 16px;">
<tr><td align="center">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #E4D5BE;border-radius:16px;overflow:hidden;font-family:'Public Sans',Helvetica,Arial,sans-serif;">
    <tr><td style="background:#2E2119;padding:22px 28px;">
      <span style="font-size:20px;font-weight:600;color:#F2E7D6;letter-spacing:-.01em;">Veline</span>
      <span style="font-size:12px;color:#D9A441;padding-left:10px;">Donde cada cita encuentra su lugar</span>
    </td></tr>
    <tr><td style="padding:32px 28px 8px;">
      <h1 style="margin:0 0 12px;font-size:23px;line-height:1.25;color:#2E2119;font-weight:600;">Te esperamos mañana</h1>
      <p style="margin:0 0 22px;font-size:15px;line-height:1.6;color:#5C4A34;">Hola &lt;img, un recordatorio de tu cita en <strong style="color:#2E2119;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Peluquería</strong>.</p>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #E4D5BE;margin-top:4px;">
    <tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Servicio</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Corte</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Cuándo</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">Martes 15 de septiembre a las 12:00</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Te atiende</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Marta</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Dónde</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">&lt;img src=x onerror=&quot;alert(1)&quot;&gt;Calle Mayor</td>
    </tr><tr>
      <td style="padding:11px 0 0;font-size:13px;color:#8A7255;">Código</td>
      <td style="padding:11px 0 0;font-size:13px;color:#2E2119;font-weight:600;text-align:right;">VL-TEST</td>
    </tr>
  </table>
      <table role="presentation" cellpadding="0" cellspacing="0" style="margin:26px 0 6px;"><tr><td style="background:#A96A3E;border-radius:8px;">
              <a href="http://localhost:5173/reserva/VL-TEST" style="display:inline-block;padding:13px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;">Ver o cancelar mi cita</a>
            </td></tr></table>
    </td></tr>
    <tr><td style="padding:20px 28px 28px;border-top:1px solid #E4D5BE;">
      <p style="margin:0;font-size:12px;line-height:1.6;color:#8A7255;">
        Este correo se ha enviado automáticamente desde Veline. Si no esperabas recibirlo, puedes ignorarlo.
      </p>
    </td></tr>
  </table>
</td></tr></table>
</body></html>",
  "subject": "Mañana tienes cita en <img src=x onerror="alert(1)">Peluquería",
  "text": "Te esperamos mañana

Un recordatorio de tu cita en <img src=x onerror="alert(1)">Peluquería.

  Servicio: <img src=x onerror="alert(1)">Corte
  Cuándo: Martes 15 de septiembre a las 12:00
  Te atiende: <img src=x onerror="alert(1)">Marta
  Dónde: <img src=x onerror="alert(1)">Calle Mayor
  Código: VL-TEST

Ver o cancelar tu cita: http://localhost:5173/reserva/VL-TEST",
}
`;
